--- a/.github/workflows/autoSyncWithUpStream.yml
+++ b/.github/workflows/autoSyncWithUpStream.yml
@@ -17,6 +17,9 @@ jobs:
           git remote add upstream https://github.com/eazybytes/springsecurity6.git
           git fetch upstream
 
+      - name: Pull changes from upstream
+        run: git pull origin main
+
       - name: List all branches from upstream
         run: git ls-remote --heads upstream
 
